2005-05-16  Tom Tromey  <tromey@redhat.com>

	* defassign.cc (class definite_assignment_visitor): Removed some
	old comments.

2005-05-07  Tom Tromey  <tromey@redhat.com>

	* verify.h (GLOM): Removed.
	(VFY_PRIMITIVE_CLASS): Likewise.

2005-04-30  Tom Tromey  <tromey@redhat.com>

	* aot/aotclass.cc (get_descriptor): New helper function.
	(add): Use it.

2005-04-28  Tom Tromey  <tromey@redhat.com>

	* header/cni.cc (generate): Use aot class' vtable layout.
	(write_include): New method.
	(write_includes): Use it.  Added 'vtable' argument.
	* header/cni.hh (cni_code_generator::factory): New field.
	(cni_code_generator::write_include): Declare.
	(cni_code_generator::write_includes): Updated.

2005-04-26  Tom Tromey  <tromey@redhat.com>

	* aot/mangle.cc (update): Create separate entry for pointer type.
	(update_array): Likewise.
	(update): Emit pending characters at end if needed.

2005-04-18  Tom Tromey  <tromey@redhat.com>

	* header/jni.cc (write_field): Actually emit #define.

2005-04-18  Tom Tromey  <tromey@redhat.com>

	* header/jni.cc (generate): Only write native methods.

2005-04-17  Tom Tromey  <tromey@redhat.com>

	* header/cni.cc (generate): Superclass of interface is Object.
	Emit attribute for java interface.

2005-04-23  Tom Tromey  <tromey@redhat.com>

	* model/invoke.cc (find_method): Call 'set_used' before early
	return.

2005-04-20  Tom Tromey  <tromey@redhat.com>

	* bytecode/outpool.hh (class outgoing_constant_pool): Renamed
	from output_constant_pool.
	* bytecode/attribute.cc, bytecode/attribute.hh,
	bytecode/classwriter.cc, bytecode/classwriter.hh,
	bytecode/generate.cc, bytecode/generate.hh, bytecode/locals.cc,
	bytecode/locals.hh, bytecode/outpool.cc: Updated.

2005-04-02  Tom Tromey  <tromey@redhat.com>

	* model/class.cc (resolve): Put name of field in error.  Correctly
	compute found_clinit for a .class file.

2005-04-02  Tom Tromey  <tromey@redhat.com>

	* model/class.cc (get_output_name): New method.